fix(ui5-label): move asterisk to the right
The asterisk marking the ui5-label as required is now positioned
to the right side of the label text. A new property "showColon" was
introduced for proper positioning and avoiding truncation of the "colon"

--- a/packages/main/src/themes/Label.css
+++ b/packages/main/src/themes/Label.css
@@ -16,7 +16,7 @@
 	cursor: inherit;
 	overflow: hidden;
 }
-:host(:not([wrap])) .label-text-wrapper {
+:host(:not([wrap])) .ui5-label-text-wrapper {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	display: inline-block;
@@ -24,19 +24,19 @@
 	max-width: 100%;
 }
 
-:host(:not([wrap])[required][show-colon]) .label-text-wrapper {
+:host(:not([wrap])[required][show-colon]) .ui5-label-text-wrapper {
 	max-width: calc(100%-0.725rem);
 }
-:host(:not([wrap])[required]) .label-text-wrapper {
+:host(:not([wrap])[required]) .ui5-label-text-wrapper {
 	max-width: calc(100%-0.475rem);
 }
-:host(:not([wrap])[show-colon]) .label-text-wrapper {
+:host(:not([wrap])[show-colon]) .ui5-label-text-wrapper {
 	max-width: calc(100%-0.3rem);
 }
-:host([show-colon]) .label-required-colon:before {
+:host([show-colon]) .ui5-label-required-colon:before {
 	content: ":";
 }
-:host([required]) .label-required-colon:after {
+:host([required]) .ui5-label-required-colon:after {
 	content:"*";
 	color: var(--sapUiFieldRequiredColor);
 	font-size: 1.25rem;
